Fix open-api spec
